@@ -90,4 +90,5 @@ void glatex_insert_ref_activated(G_GNUC_UNUSED GtkMenuItem * menuitem,
 void glatex_replace_special_character();
 void glatex_insert_usepackage_dialog(G_GNUC_UNUSED GtkMenuItem * menuitem,
 	 G_GNUC_UNUSED gpointer gdata);
+void glatex_enter_key_pressed_in_entry(GtkWidget *widget, gpointer dialog);
 #endif
